@@ -1,3 +1,5 @@
 XCLIENT Info:
-  xclient     = optional
-  strings     = XCLIENT FOO=bar
+  xclient         = optional
+  no_verify       = FALSE
+  before starttls = FALSE
+  strings         = XCLIENT FOO=bar
